<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- titlebar中文本 -->
    <string name="titlebar_together">一起</string>
    <string name="titlebar_talk">校内圈</string>
    <string name="titlebar_discovery">探索</string>
    <string name="titlebar_individual_center">我的</string>
    
    <string name="titlebar_bbs">侃侃</string>
    <string name="titlebar_secret">秘侃</string>
    
    <string name="publish_event">发起</string>
    <string name="event_text_title">活动名称  :</string>
    <string name="event_text_content">活动详情 :</string>
    <string name="event_text_time">开始时间 :</string>
    <string name="event_text_address">地址 :</string>
    
     <string name="event_text_days">游玩天数:</string>
    
    <string name="event_hint_title">不能多于50个字</string>
    
    <string name="publish_text">发    起</string>
    <string name="publish_campus_circle_hint_title">此刻的心情。。。</string>
    <string name="second_lesson_take">订阅</string>
    
     
    
    <string name="app_name">DevApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

        <string name="add_attention">加关注</string>
    <string name="user_post">职位：产品经理</string>
    <string name="user_book">书单：25本</string>
    <string name="user_name">西北老狼michael</string>
    <string name="user_des">谁能像优乐美一样把我捧在手心，我就能让他的儿子长的更帅女儿长的更漂亮</string>
    <string name="user_recommend_tip">TA推荐的好书</string>
    
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>
    
     <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- 插件提示 -->
    <string name="no_plugin">没有发现插件apk，请将插件放在 /sdcard/devapp/plugins目录下\n了解更多：https://github.com/singwhatiwanna/dynamic-load-apk</string>
    <string name="introducation">DL : Apk动态加载框架\n了解更多：https://github.com/singwhatiwanna/dynamic-load-apk</string>
</resources>
